--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
-    "sequelize": "^4.41.2"
+    "sequelize": "^4.41.2",
+    "sequelize-auto": "^0.4.29"
   },
   "devDependencies": {
     "chai": "^4.1.2",
