Updated front end
updated paths, updated file locations, updated html routing, added 'path' npm package. change password in config.json.

--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "Filbert_8",
+    "password": "",
     "database": "JobSiteDB",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "",
     "database": "testdb",
     "host": "localhost",
     "dialect": "mysql",
