fixed params error

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "3353cougars",
+    "password": "Filbert_8",
     "database": "JobSiteDB",
     "host": "localhost",
     "dialect": "mysql"
